--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 
 body {
     color:#FFF;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
 html {
@@ -94,27 +97,6 @@ html {
     }
   }
 
-  #welcomeText {
-
-   position:relative;
-   left:20%;
-   top:200px;
-   display:block;
-   text-align: justify;
-   font-family: "Montserrat";
-   font-size: 50px;
-  }
-  #welcomesubText {
-    position:fixed;
-    left:20%;
-    top:400px;
-    opacity: 80%;
-    display:block;
-   
-  
-     font-family: "Montserrat";
-     font-size: 25px;
-   }
 
    root {
     --font-family: "Montserrat"
@@ -218,12 +200,54 @@ html {
   .waviy {
     position: relative;
   }
+
+  
+  #welcomeText {
+    position: fixed;
+    display: flex;
+    font-family: "Montserrat";
+    font-size: 40px;
+    top: 30%;
+    left: 20%;
+    min-height: 20%;
+    min-width: 20%;
+    word-spacing: normal;
+    margin: 0 auto;
+
+   }
+   #welcomeText2 {
+    position: fixed;
+    display: flex;
+    font-family: "Montserrat";
+    font-size: 40px;
+    top: 40%;
+    left: 20%;
+    min-height: 20%;
+    min-width: 20%;
+    margin: 0 auto;
+
+
+   }
+
+   #welcomesubText {
+    position: fixed;
+    display: flex;
+    font-family: "Montserrat";
+    font-size: 40px;
+    top: 50%;
+    left: 20%;
+    opacity: 80%;
+    
+   }
+
+
+
   .waviy span {
-    letter-spacing: 1px;
+    letter-spacing: .1em;
     font-family: "Montserrat";
     position: relative;
     display: inline-block;
-    font-size: 40px;
+    font-size: 5rem;
     color: #fff;
     animation-name: flip;
     animation-duration: 3s;
@@ -232,18 +256,30 @@ html {
    
   }
   @keyframes flip {
-    0%,5% {
+    0%,20% {
 
       transform: rotateY(360deg)
     }
   }
 
+  /*
   img {
-    position:inherit;
+    position: relative;
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+    align-items: center;
+
+  }
+  */
+   /* position:inherit;
     transform: translateX(250%);
     height: 15%;
     width: 15%;
     border-radius: 50%;
     
+    
   }
+*/ 
 
