--- a/style.css
+++ b/style.css
@@ -1,16 +1,34 @@
 
 body {
     color:#FFF;
-    width: 100%;
-    height: 100%;
-    margin: 0;
+    margin: 0 auto;
+    padding: 0 auto;
+    font-family: 'Open Sans', sans-serif;
+    height: 100vh;
+    width: 100vw;
+    overflow-y: scroll;
+
+
 }
 
+  
+
+
 html {
-    height: 100%;
     background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+    /*overflow: hidden;*/
+    /*width: 1920px;*/
+    margin: auto;
     overflow: hidden;
+
   }
+
+  html.noscroll {
+    position: fixed;
+    overflow-y: scroll;
+    width: 100%;
+  }
+
   
   #stars {
     width: 1px;
@@ -50,7 +68,8 @@ html {
     width: 3px;
     height: 3px;
     background: transparent;
-    box-shadow: 1703px 1208px #FFF , 381px 207px #FFF , 1516px 1990px #FFF , 1960px 982px #FFF , 922px 1278px #FFF , 689px 1766px #FFF , 538px 554px #FFF , 802px 1529px #FFF , 871px 1805px #FFF , 228px 1830px #FFF , 353px 186px #FFF , 1873px 1154px #FFF , 494px 1244px #FFF , 1415px 261px #FFF , 1020px 1990px #FFF , 1924px 1169px #FFF , 1205px 464px #FFF , 596px 830px #FFF , 1319px 504px #FFF , 953px 1850px #FFF , 408px 1360px #FFF , 569px 1704px #FFF , 1367px 729px #FFF , 807px 1845px #FFF , 572px 825px #FFF , 523px 1089px #FFF , 1405px 1622px #FFF , 1352px 423px #FFF , 1247px 1758px #FFF , 1117px 920px #FFF , 983px 352px #FFF , 175px 1351px #FFF , 962px 260px #FFF , 918px 1530px #FFF , 1184px 935px #FFF , 201px 473px #FFF , 90px 1759px #FFF , 211px 933px #FFF , 1887px 171px #FFF , 177px 101px #FFF , 844px 346px #FFF , 283px 1821px #FFF , 1236px 1225px #FFF , 173px 1875px #FFF , 24px 1776px #FFF , 277px 804px #FFF , 1714px 715px #FFF , 937px 1882px #FFF , 1708px 1405px #FFF , 173px 1847px #FFF , 1902px 1160px #FFF , 1725px 1270px #FFF , 36px 18px #FFF , 1612px 1467px #FFF , 1390px 1733px #FFF , 927px 1315px #FFF , 1907px 1337px #FFF , 1855px 1454px #FFF , 1033px 1425px #FFF , 1450px 1359px #FFF , 1422px 771px #FFF , 256px 343px #FFF , 1581px 340px #FFF , 1180px 247px #FFF , 191px 882px #FFF , 372px 1171px #FFF , 1509px 937px #FFF , 1018px 1829px #FFF , 121px 152px #FFF , 327px 767px #FFF , 1438px 1421px #FFF , 321px 905px #FFF , 616px 245px #FFF , 1957px 1520px #FFF , 1811px 1924px #FFF , 1454px 1778px #FFF , 1507px 822px #FFF , 649px 218px #FFF , 362px 1567px #FFF , 1637px 145px #FFF , 115px 466px #FFF , 345px 935px #FFF , 112px 1019px #FFF , 1440px 1910px #FFF , 1280px 1367px #FFF , 1505px 890px #FFF , 788px 927px #FFF , 753px 1273px #FFF , 1924px 1714px #FFF , 495px 1149px #FFF , 267px 1851px #FFF , 1293px 1431px #FFF , 1159px 433px #FFF , 1725px 1170px #FFF , 1067px 296px #FFF , 746px 463px #FFF , 412px 349px #FFF , 1193px 1421px #FFF , 564px 455px #FFF , 1675px 589px #FFF;
+    box-shadow: 1703px 
+    1208px #FFF , 381px 207px #FFF , 1516px 1990px #FFF , 1960px 982px #FFF , 922px 1278px #FFF , 689px 1766px #FFF , 538px 554px #FFF , 802px 1529px #FFF , 871px 1805px #FFF , 228px 1830px #FFF , 353px 186px #FFF , 1873px 1154px #FFF , 494px 1244px #FFF , 1415px 261px #FFF , 1020px 1990px #FFF , 1924px 1169px #FFF , 1205px 464px #FFF , 596px 830px #FFF , 1319px 504px #FFF , 953px 1850px #FFF , 408px 1360px #FFF , 569px 1704px #FFF , 1367px 729px #FFF , 807px 1845px #FFF , 572px 825px #FFF , 523px 1089px #FFF , 1405px 1622px #FFF , 1352px 423px #FFF , 1247px 1758px #FFF , 1117px 920px #FFF , 983px 352px #FFF , 175px 1351px #FFF , 962px 260px #FFF , 918px 1530px #FFF , 1184px 935px #FFF , 201px 473px #FFF , 90px 1759px #FFF , 211px 933px #FFF , 1887px 171px #FFF , 177px 101px #FFF , 844px 346px #FFF , 283px 1821px #FFF , 1236px 1225px #FFF , 173px 1875px #FFF , 24px 1776px #FFF , 277px 804px #FFF , 1714px 715px #FFF , 937px 1882px #FFF , 1708px 1405px #FFF , 173px 1847px #FFF , 1902px 1160px #FFF , 1725px 1270px #FFF , 36px 18px #FFF , 1612px 1467px #FFF , 1390px 1733px #FFF , 927px 1315px #FFF , 1907px 1337px #FFF , 1855px 1454px #FFF , 1033px 1425px #FFF , 1450px 1359px #FFF , 1422px 771px #FFF , 256px 343px #FFF , 1581px 340px #FFF , 1180px 247px #FFF , 191px 882px #FFF , 372px 1171px #FFF , 1509px 937px #FFF , 1018px 1829px #FFF , 121px 152px #FFF , 327px 767px #FFF , 1438px 1421px #FFF , 321px 905px #FFF , 616px 245px #FFF , 1957px 1520px #FFF , 1811px 1924px #FFF , 1454px 1778px #FFF , 1507px 822px #FFF , 649px 218px #FFF , 362px 1567px #FFF , 1637px 145px #FFF , 115px 466px #FFF , 345px 935px #FFF , 112px 1019px #FFF , 1440px 1910px #FFF , 1280px 1367px #FFF , 1505px 890px #FFF , 788px 927px #FFF , 753px 1273px #FFF , 1924px 1714px #FFF , 495px 1149px #FFF , 267px 1851px #FFF , 1293px 1431px #FFF , 1159px 433px #FFF , 1725px 1170px #FFF , 1067px 296px #FFF , 746px 463px #FFF , 412px 349px #FFF , 1193px 1421px #FFF , 564px 455px #FFF , 1675px 589px #FFF;
     animation: animStar 200s linear infinite;
 
   }
@@ -144,6 +163,7 @@ html {
   body {
     font-family: var(--font-family);
     font-family: "Montserrat";
+    
   }
 
   nav {
@@ -198,46 +218,51 @@ html {
   }
 
   .waviy {
-    position: fixed;
+    position: sticky;
     display: flex;
-    
+    width: 0px;
+    left: 15vw;
+    height: 110vh;
   }
 
   
+
+
+
+  
   #welcomeText {
-    position: fixed;
+    position: sticky;
     display: flex;
     font-family: "Montserrat";
-    font-size: 40px;
-    top: 35%;
-    left: 20%;
-    min-height: 20%;
-    min-width: 20%;
-    word-spacing: normal;
+    font-size: 8.9vh;
+    width: 100%;
     margin: 0 auto;
+    margin-top: 15vh;
+    margin-bottom: 5vh;
+
 
    }
    #welcomeText2 {
-    position: fixed;
+    position: sticky;
     display: flex;
     font-family: "Montserrat";
-    font-size: 40px;
-    top: 45%;
-    left: 20%;
-    min-height: 20%;
-    min-width: 20%;
+    font-size: 8.9vh;
     margin: 0 auto;
+    margin-top: 25vh;
+    
    }
 
    #welcomesubText {
-    position: fixed;
+    position: sticky;
     display: flex;
     font-family: "Montserrat";
-    font-size: 6.9vh;
-    top: 55%;
-    left: 20%;
+    font-size: 4.9vh;
+    width: 66vw;
     opacity: 80%;
     margin: 0 auto;
+    left : 15vw;
+    margin-bottom: 5vh;
+    transform: translate(-2vw,-75vh);
 
     
    }
@@ -267,25 +292,88 @@ html {
 
   
   img {
-    position: fixed;
+    position: sticky;
     display: flex;
-    height: 35vh;
-    align-items: center;
-    top: 20%;
-    left: 45%;
+    height: 25vh;
+    width: 75vw;
+    left: 75vw;
     margin: 0 auto;
     background-color: transparent;
-
+    border-radius: 25%;
+    left: 25vw;
+    transform: translateX(35vw);
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+    left : 10vw;
+    transform: translate(2vw,5vh);
 
   }
+
+
+  section {
+    width: 100%;
+    height: 100vh;
+  }
+
+
+  .hidden {
+    opacity: 0;
+    filter: blur(10px);
+    transition: all 1s;
+    z-index: 0;
+   
+  }
+
+  .show {
+    opacity: 100%;
+    filter: blur(0px);
+    z-index: 1;
+  }
+
+
+  #about {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 0 3rem;
+    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+  }
+
+  #skills {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 0 3rem;
+    background: radial-gradient(ellipse at top, #1b2735 0%, #090a0f 100%);
+  }
+
+  #projects {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 0 3rem;
+    background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+
+  }
+
+  #contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    padding: 0 3rem;
+    background: radial-gradient(ellipse at top, #1b2735 0%, #090a0f 100%);
+  }
+
+
+
+
   
-   /* position:inherit;
-    transform: translateX(250%);
-    height: 15%;
-    width: 15%;
-    border-radius: 50%;
-    
-    
-  }
-*/ 
 
