--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ nav ul li {
   transform: translateX(15%);
   min-height: 1000px;
   gap: 1rem;
-  min-width: 700px;
+  min-width: 200px;
   
 }
 
@@ -406,41 +406,82 @@ section {
   width: 100vw;
   flex-direction: row wrap;
   justify-content: space-evenly;
-  align-items: center;
   flex-basis: auto;
-  min-width: 800px;
+  min-width: 200px;
   transform: translateY(25%);
+  overflow: hidden;
+  gap: 5vw;
   
 
 }
 
-#flex1 {
-  display: flex;
-  min-width: auto;
-  height: 500px;
-  border: 200px solid #1b2735;
-  border-top: 200px;
-  border-radius: 1rem;
-  z-index: 1;
+.noSlide {
+  opacity: 0;
+  filter: blur(10px);
+  transition: all .5s ease-in;
+  z-index: 0;
+  left: -100%;
 
 }
 
-#flex2 {
+.slide {
+  opacity: 1;
+  filter: blur(0px);
+  transition: all .5s ease-in;
+  animation: 3s slide-right forwards;
+}
+
+@keyframes slide-right {
+  100% {
+    left: 0;
+  }
+}
+
+
+#flex1 {
   display: flex;
-  height: 500px;
-  border: 200px solid #1b2735;
-  border-top: 200px;
+  border: 5px solid #1b2735;
   border-radius: 1rem;
   z-index: 1;
+  background-color: #1b2735;
+  justify-content: center;
+  max-width: 33.3vw;
+  padding: 1em;
+  word-wrap: normal;
+  line-height: 1.5em;
+  flex: 1;
+
+
+}
+
+
+
+#flex2 {
+  display: flex;
+  border: 5px solid #1b2735;
+  border-radius: 1rem;
+  z-index: 1;
+  background-color: #1b2735;
+  justify-content: center;
+  max-width: 33.3vw;
+  padding: 1em;
+  word-wrap: normal;
+  line-height: 1.5em;
+  flex: 1;
 }
 
 #flex3 {
   display: flex;
-  height: 500px;
-  border: 200px solid #1b2735;
-  border-top: 200px;
+  border: 5px solid #1b2735;
   border-radius: 1rem;
   z-index: 1;
+  background-color: #1b2735;
+  justify-content: center;
+  max-width: 33.3vw;
+  padding: 1em;
+  word-wrap: normal;
+  line-height: 1.5em;
+  flex: 1;
 }
 
 
