--- a/style.css
+++ b/style.css
@@ -324,20 +324,20 @@ section {
 }
 
 .hidden {
+  visibility: hidden;
   opacity: 0;
   filter: blur(10px);
+  transform: translateY(20px);
   transition: all .5s ease-in;
   z-index: 0;
  
 }
 
 .show {
+  visibility: visible;
   opacity: 1;
   filter: blur(0px);
   transition: all .5s ease-in;
-  animation: bounce 1s;
-  
-
 }
 
 
@@ -401,6 +401,7 @@ section {
 }
 
 .noSlide {
+  visibility: hidden;
   opacity: 0;
   filter: blur(10px);
   transition: all .5s ease-in;
@@ -408,10 +409,10 @@ section {
 }
 
 .slide {
+  visibility: visible;
   opacity: 1;
   filter: blur(0px);
   transition: all .5s ease-in;
-  transform: translateY(25%);
   animation: 1s slide-right forwards;
 }
 
